# shellgpt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  PROMOTION.md  README.md  README_CN.md  USAGE.md  __init__.py  ci_test.py  ci_test_minimal.py  ci_test_simple.py  ci_test_ultra_minimal.py  demo.py  demo_with_fallback.py  offline_demo.py  pyproject.toml  run_shellgpt.py  simple_demo.py  test_real_functionality.py  test_shellgpt.py
.github/: PULL_REQUEST_TEMPLATE.md  description.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
cli/: __init__.py  main.py
config/: __init__.py  settings.py
core/: __init__.py  command_generator.py  context_manager.py  nlp_engine.py  safety_checker.py
models/: __init__.py  command.py
utils/: __init__.py  patterns.py
